# csv_to_parquet_enabler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  csv2parquet.py  pyproject.toml  requirements.txt  sample.csv
changelog/: README.md  v0.1.0.md  v0.2.0.md
