[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-to-parquet-enabler"
version = "0.2.0"
description = "Convert CSV to Parquet and generate a matching Athena CREATE EXTERNAL TABLE DDL."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "yogi-dpi" }]
keywords = ["csv", "parquet", "athena", "aws", "etl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.scripts]
csv2parquet = "csv2parquet:main"

[project.urls]
Homepage = "https://github.com/yogi-dpi/csv_to_parquet_enabler"
Issues = "https://github.com/yogi-dpi/csv_to_parquet_enabler/issues"

[tool.setuptools]
py-modules = ["csv2parquet"]
